--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -12,6 +12,7 @@ div.login-container{
     margin:0px auto;
     background-color: rgba(223, 223, 223, 0.405);
     height:150px;
+    text-decoration: underline;
 }
 
 button {
