--- a/Mees-project/src/assets/page-style/_sections.scss
+++ b/Mees-project/src/assets/page-style/_sections.scss
@@ -3,7 +3,6 @@
 .BroodContainer{
     display: block;
     padding: 10px;
-    
 }
 
 .title_container{
@@ -46,8 +45,14 @@
     font-weight: 700; 
     margin-top:10px;
 }
-@media only screen and (max-width: 600px)  {
-    .prod_wraper{
-        width: 100%;
+@media only screen and (max-width: 690px) {
+    .prod_wraper {
+      width: 100%;
     }
-}
+  }
+  
+  @media screen and (max-width: 500px) {
+    .title {
+      display: flex;
+    }
+  }
