--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -346,6 +346,55 @@ h2 {
   height: auto;
 }
 
+body {
+  overflow: hidden;
+}
+
+.header {
+  margin-top: 5%;
+  text-align: center;
+  padding: 0;
+  font-family: "Times New Roman", Times, serif;
+  color: black;
+}
+
+.description {
+  margin: 0;
+  padding: 0;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.login-container {
+  padding-top: 1%;
+  height: 175px;
+  width: 30%;
+  background-color: rgba(128, 128, 128, 0.6);
+  margin: 100px auto 0px auto;
+  text-align: center;
+}
+
+.inputContainer {
+  margin-top: 5%;
+  width: 90%;
+}
+
+.inputField {
+  box-sizing: border-box;
+  align-self: center;
+  height: 20px;
+  width: 50%;
+  font-size: 16px;
+}
+
+.button {
+  margin-top: 5%;
+  width: 40%;
+  height: 20px;
+  border: 1px solid;
+  font-size: 15px;
+  font-weight: 500;
+}
+
 * {
   margin: 0;
   padding: 0;
