--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -5,7 +5,7 @@
   align-items: center;
   color: #fff;
   padding: 10px;
-  background-color: chocolate;
+  background-color: #f9047e;
   z-index: 999;
 }
 
@@ -41,7 +41,7 @@
   margin: 5px auto;
   -webkit-animation: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: chocolate;
+  background-color: rgba(249, 4, 126, 0.6901960784);
 }
 
 .banner {
@@ -82,7 +82,6 @@ h2 {
 @media (max-width: 900px) {
   .NavBar {
     display: flex;
-    z-index: 9999;
   }
   .menu-btn {
     text-decoration: none;
@@ -163,7 +162,7 @@ h2 {
     top: 50px;
     gap: 0;
     flex-direction: column;
-    background-color: chocolate;
+    background-color: #f9047e;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -346,55 +345,91 @@ h2 {
   height: auto;
 }
 
-body {
-  overflow: hidden;
-}
-
-.header {
-  margin-top: 5%;
-  text-align: center;
-  padding: 0;
-  font-family: "Times New Roman", Times, serif;
-  color: black;
-}
-
-.description {
-  margin: 0;
-  padding: 0;
-  font-family: "Times New Roman", Times, serif;
-}
-
 .login-container {
-  padding-top: 1%;
-  height: 175px;
-  width: 30%;
-  background-color: rgba(128, 128, 128, 0.6);
-  margin: 100px auto 0px auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  height: 60vh;
+  padding: 20px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.login_form {
+  min-width: 100%;
+  min-height: 30vmin;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  font-size: 18px;
+  z-index: -1;
+  position: relative;
+}
+
+.login_form::after {
+  content: "";
+  position: absolute;
+  background-color: chocolate;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 10px;
+  filter: blur(1px);
+  opacity: 0.6;
+}
+
+.login_form .login_title {
+  display: inline;
   text-align: center;
+  color: #000;
+  padding: 0.5rem;
+  margin-bottom: 1.2rem;
+  border-bottom: 1px solid black;
 }
 
-.inputContainer {
-  margin-top: 5%;
-  width: 90%;
+.login_form label {
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
 }
 
-.inputField {
-  box-sizing: border-box;
-  align-self: center;
-  height: 20px;
-  width: 50%;
-  font-size: 16px;
-}
-
-.button {
-  margin-top: 5%;
-  width: 40%;
-  height: 20px;
-  border: 1px solid;
+.login_form input {
+  outline: none;
+  border: none;
   font-size: 15px;
-  font-weight: 500;
+  padding: 10px;
+  height: 100%;
+  margin: 10px;
+  flex: 0.5;
 }
 
+.login_form .btn_container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.login_form .login_btn {
+  border: none;
+  background-color: rgba(231, 55, 35, 0.8666666667);
+  color: #fff;
+  padding: 10px;
+  width: 40%;
+  margin: 5%;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+@media only screen and (max-width: 500px) {
+  .login-container {
+    height: 90vh;
+  }
+}
 * {
   margin: 0;
   padding: 0;
