--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -1,15 +1,15 @@
 // Navbar style
-
 .NavBar {
     display: flex;
     justify-content: space-around;
     align-items: center;
     color: #fff;
     padding: 10px;
-    background-color: chocolate;
-z-index: 999;
-    // overflow: auto;
+    background-color: #f9047e;
+//    background-color: chocolate;
+    z-index: 999;
 }
+
 .menu {
     list-style: none;
     display: flex;
@@ -41,7 +41,8 @@ z-index: 999;
     margin: 5px auto;
     -webkit-animation: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: chocolate;
+    // background-color: chocolate;
+    background-color: #f9047eb0;
 }
 // banner
 .banner {
@@ -87,7 +88,7 @@ h2 {
 @media (max-width: 900px) {
     .NavBar {
         display: flex;
-       z-index: 9999;
+        
     }
     .menu-btn {
         text-decoration: none;
@@ -152,6 +153,7 @@ h2 {
 @media (max-width: 500px) {
     .hamburger {
         display: block;
+      
     }
     .hamburger.active .bar:nth-child(2) {
         opacity: 0;
@@ -172,7 +174,8 @@ h2 {
         top: 50px;
         gap: 0;
         flex-direction: column;
-        background-color: chocolate;
+        // background-color: chocolate;
+        background-color: #f9047e;
         width: 100%;
         height: 100%;
         text-align: center;
