--- a/Mees-project/src/assets/page-style/_login.scss
+++ b/Mees-project/src/assets/page-style/_login.scss
@@ -1,52 +1,81 @@
-body{
-    //background: linear-gradient(120deg,#ff8800c0, #ff9900);
+.login-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%; 
+    height: 60vh;  
+    padding: 20px;
     overflow: hidden;
+    z-index: -1;
 }
-
-.header{
-    margin-top: 5%;
+.login_form{
+     min-width: 100%;
+    min-height: 30vmin;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    font-size: 18px;
+    z-index: -1;
+    position: relative;
+}
+.login_form::after{
+    content:"";
+    position: absolute;
+    // background-color: rgb(70, 68, 68);
+    background-color: chocolate;
+   width: 100%;
+   height: 100%;
+    z-index: -1;
+    border-radius: 10px;
+    filter: blur(1px);
+    opacity: 0.6;
+}
+.login_form .login_title{
+    display: inline;
     text-align: center;
-    padding: 0;
-    font-family: "Times New Roman", Times, serif;
-    color: black;
+    color: #000; 
+    padding: 0.5rem;
+    margin-bottom: 1.2rem;
+    border-bottom: 1px solid black;
 }
-
-.description{
-    margin: 0;
-    padding: 0;
-    font-family: "Times New Roman", Times, serif;
-
+.login_form  label{
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
 }
-
-.login-container {
-    padding-top: 1%;
-    height: 175px;
-    width: 30%;
-    background-color: rgba($color: #808080, $alpha: 0.6);
-    margin: 100px auto 0px auto;
-    text-align:center
+.login_form input{
+    outline: none;
+    border: none;
+   font-size: 15px;
+   padding: 10px;
+   height: 100%;
+   margin: 10px;
+   flex:  0.5;
 }
-
-.inputContainer {
-    margin-top: 5%;
-    width: 90%;
+   
+.login_form .btn_container{
+    display: flex;
+    justify-content: center;
+   
+    width: 100%;
 }
-
-.inputField{
-box-sizing: border-box;
-align-self: center;
-height: 20px;
-width: 50%;
-font-size: 16px;
-
-}
-
-.button{
-    margin-top: 5%;
+.login_form .login_btn{
+    border: none;
+    background-color: #e73723dd;
+    color: #fff;
+    padding: 10px;
     width: 40%;
-    height: 20px;
-    border: 1px solid;
+    margin: 5%;
+    cursor: pointer;
+    font-weight: bold;
     font-size: 15px;
-    font-weight: 500;
-    
+}
+@media only screen and (max-width: 500px)  {
+    .login-container{
+        height: 90vh; 
+    }
+
 }
