--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -2,7 +2,7 @@
 @import "./page-style/Navbar";
 @import "./page-style/sections";
 @import "./page-style/slideshow";
-
+@import "./page-style/login";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
