--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -5,7 +5,7 @@
   align-items: center;
   color: #fff;
   padding: 10px;
-  background-color: chocolate;
+  background-color: #f9047e;
   z-index: 999;
 }
 
@@ -41,7 +41,7 @@
   margin: 5px auto;
   -webkit-animation: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: chocolate;
+  background-color: rgba(249, 4, 126, 0.6901960784);
 }
 
 .banner {
@@ -82,7 +82,6 @@ h2 {
 @media (max-width: 900px) {
   .NavBar {
     display: flex;
-    z-index: 9999;
   }
   .menu-btn {
     text-decoration: none;
@@ -163,7 +162,7 @@ h2 {
     top: 50px;
     gap: 0;
     flex-direction: column;
-    background-color: chocolate;
+    background-color: #f9047e;
     width: 100%;
     height: 100%;
     text-align: center;
